[metadata]
name = coinbase-tools
description = Coinbase Tools
long_description = file: README.md
long_description_content_type = text/markdown
version = attr:coinbase-tools.__version__
url = https://github.com/devinrsmith/coinbase-tools
project_urls =
    Source Code = https://github.com/devinrsmith/coinbase-tools
    Bug Tracker = https://github.com/devinrsmith/coinbase-tools/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Development Status :: 3 - Alpha
keywords = coinbase
author = Devin Smith
author_email = devinsmith@deephaven.io
platforms = any

[options]
package_dir=
    =src
packages=find:
install_requires =
    websockets

[options.packages.find]
where=src

# [options.entry_points]
# console_scripts =
#     hello = coinbase-tools:hello_world